--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -34,15 +34,22 @@
 	height: 100vh;
 }
 .video-container video {
-	position: fixed;
+	position: absolute;
 	top: 50%;
 	left: 50%;
 	min-width: 100%;
-	min-height: 100%;
+	height: 100%;
 	width: auto;
 	height: auto;
 	z-index: -100;
 	transform: translate(-50%, -50%);
+}
+
+@media (max-width: 746px) {
+	.video-container video {
+		/*in widescreen, fixed causes bottom overflow, so it changes for phones only*/
+		position: fixed;
+	}
 }
 
 .absolute {
