--- a/src/components/Jukebox/jukebox.css
+++ b/src/components/Jukebox/jukebox.css
@@ -8,6 +8,7 @@
 	-webkit-box-shadow: 0px 0px 7px 0px rgba(89, 89, 89, 0.5);
 	-moz-box-shadow: 0px 0px 7px 0px rgba(89, 89, 89, 0.5);
 	box-shadow: 0px 0px 7px 0px rgba(89, 89, 89, 0.5);
+	z-index: 0;
 }
 
 .intro-heading {
